# rust-cheatsheet

./: .gitignore  .travis.yml  Cargo.toml  build_pages.sh  chrono.html  data.js  fs.html  index.html  main.js  style.css  theme-dark.css  theme-light.css
.github/: FUNDING.yml
.github/workflows/: check.yml  deploy.yml
data/: chrono.yml  fs.yml  index.yml
src/: footer.html  header.html  input.rs  macros.rs  main.rs  page_gen.rs  parser.rs  template.html  token.rs
static/: script.js  style.css  theme-dark.css  theme-light.css
