[package]
name = "cheatsheet-gen"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"
publish = false

[dependencies]
bitflags = "1.0.4"
combine = "4.0.1"
either_n = "0.2.0"
lazy_static = "1.3.0"
serde_yaml = "0.8.9"
v_htmlescape = "0.13.1"

[dependencies.serde]
version = "1.0.90"
features = ["derive"]

[dev-dependencies]
pretty_assertions = "1"
